2009-02-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPointerFunctions.m: Add some more functions to be set by
	options.

2009-02-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPortCoder.m: Use scanned memory to hold array
	* Source/NSKeyedUnarchiver.m: ditto
	* Source/NSFileManager.m: ditto

2009-02-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUnarchiver.m:
	* Source/NSString.m:
	* Source/Additions/GSMime.m:
	* Source/NSData.m:
	* Source/GSHTTPAuthentication.m:
	* Source/NSSerializer.m:
	* Source/unix/GSRunLoopCtxt.m:
	* Source/win32/GSRunLoopCtxt.m:
	Various changes to use unscanned collectable memory with GC.

2009-02-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNotificationCenter.m: Fix bug removing observations for
	collected observers.
	* Headers/Foundation/NSGarbageCollector.h:
	* Source/NSGarbageCollector.m:
	* Source/NSObject.m:
	Update the behavior of the -zone method to match MacOS-X 10.5 and
	always return the default zone when used with GC.

2009-02-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConcretePointerFunctions.h:
	* Source/NSConcretePointerFunctions.m:
	* Source/NSPointerFunctions.m:
	* Source/NSPointerArray.m:
	* Source/GNUmakefile:
	Partial implementation of concrete pointer functions class.

2009-02-09  Xavier Glattard <xavier.glattard@online.fr>

	* Headers/Foundation/NSPredicate.h: 
	* Source/NSPredicate.m: Declare and implement two new methods for
	filtering NSSet: 
	  * [-filterUsingPredicate:]
	  * [+filteredSetUsingPredicate:]

2009-02-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/NSMessagePortNameServer.m: Fix GC error on windows
	as reported by Ly Liyi
	* configure.ac: Check for new GC_allow_register_threads() function.
	* Source/NSThread.m: Attempt to fix thread registration for GC.
	* Source/NSObject.m: Initialise finalize on mingw as well as unix.
	* Source/NSZone.m: Remove unnecessary casts.

2009-02-09  Matt Rice  <ratmice@gmail.com>
